--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -2,5 +2,6 @@ dependencies {
     compile project(':annotation')
 
     compile 'com.google.auto.service:auto-service:1.0-rc2'
+    compile 'io.reactivex:rxjava:1.1.9'
     compile 'com.squareup:javapoet:1.7.0'
 }
